# Stock-Keeper

./: .gitignore  Finlight_API_Test.ipynb  Finnhub_API_Test.ipynb  Finnhub_API_Test_Copilot.ipynb  Makefile  MarketWatch_Scraper_Test.ipynb  README.md  Stock-Keeper_plan_prompt.md  pyproject.toml  stock_keeper-demo.ipynb  stock_keeper_production_demo.ipynb
.github/workflows/: ci.yml
notebooks/: stock_keeper-demo.ipynb  stock_keeper_production_demo.ipynb
scripts/: run_demo.bat
stock_keeper/: __init__.py  config.py  main.py  pipeline.py
stock_keeper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
stock_keeper/clients/: __init__.py  exceptions.py  finnhub_client.py
stock_keeper/data/: __init__.py  feature_engineering.py  sentiment.py
stock_keeper/forecasting/: forecaster.py
stock_keeper/interface/: agent.py  api.py  cli.py  prompter.py
stock_keeper/optimization/: __init__.py  optimizer.py
stock_keeper/scoring/: __init__.py  scorer.py
tests/: test_feature_engineering.py  test_forecasting_and_scoring.py
