[project]
name = "stock-keeper"
version = "0.1.0"
description = "AI-driven stock portfolio recommendation engine"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Stock Keeper", email = "noreply@example.com"}
]
license = "MIT"

dependencies = [
  "pandas>=2.2",
  "numpy>=2.0",
  "requests>=2.31",
  "scikit-learn>=1.3"
]

[project.scripts]
stock-keeper = "stock_keeper.main:main"
